--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --config ./webpack.config.js",
-    "watch": "webpack --mode=development --config ./webpack.config.js --watch",
+    "watch": "npx babel src --out-dir lib --watch",
     "compile": "npx babel src --out-dir lib"
   },
   "repository": {
@@ -30,11 +29,17 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "axios": "^0.19.2",
     "draft-js": "^0.11.6",
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
     "react": "^16.13.1",
+    "react-cropper": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-modal": "^3.11.2",
