--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-content-block-controller",
   "version": "0.1.0",
-  "description": "ContentBlockController",
+  "description": "React ContentBlockController for psytelepat/lootbox",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,11 +22,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "css-loader": "^3.6.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "babel-plugin-transform-runtime": "^6.23.0"
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
