--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
     "react": "^16.13.1",
+    "react-contextmenu": "^2.14.0",
     "react-cropper": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
